--- a/estilos/main.css
+++ b/estilos/main.css
@@ -1,5 +1,125 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200;1,500;1,700&display=swap');
-
 body {
-    font-family: 'poppins', sans-serif;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    
+}
+
+.contenedor-video {
+    position: fixed; /* Cambia a posición fija */
+    top: 0;
+    left: 0;
+    width: 100vw; /* Ancho del 100% del viewport */
+    height: 56.25vw; /* Mantén la relación de aspecto 16:9 */
+    max-width: 100%; /* Ancho máximo */
+    max-height: 100vh; /* Altura máxima */
+    z-index: -1; /* Coloca el video detrás de otros elementos */
+}
+
+.contenedor-video video {
+    width: 100%; /* Asegura que el video ocupe todo el ancho del contenedor */
+    height: 100%; /* Asegura que el video ocupe todo el alto del contenedor */
+    object-fit: cover; /* Ajusta el video para cubrir el contenedor */
+}
+header {
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px;
+    background-color: #333;
+    position: relative;
+    z-index: 1000;
+}
+
+.menu-icon img {
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.menu-desplegable {
+    position: fixed;
+    top: 0;
+    left: -250px; /* Inicialmente fuera de la vista a la izquierda */
+    width: 250px;
+    height: 100%;
+    background-image: url('../imagenes/h1.jpg');
+    background-color: #333;
+    color: white;
+    padding-top: 60px;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
+    transition: left 0.3s ease; /* Animación suave */
+    z-index: 2000; /* Asegura que esté por encima de otros elementos */
+}
+
+.menu-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: #444;
+    color: white;
+    font-size: 16px;
+}
+
+.menu-title {
+    flex-grow: 1; /* Hace que el contenedor de texto use todo el espacio disponible */
+    text-align: center; /* Centra el texto */
+}
+
+.menu-header img {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.menu-desplegable ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.menu-desplegable ul li {
+    padding: 15px;
+    text-align: center;
+}
+
+.menu-desplegable ul li a {
+    color: white;
+    text-decoration: none;
+    display: block;
+    padding: 15px;
+    text-align: center;
+    font-weight: bold; /* Engrosa la letra */
+}
+
+.menu-desplegable ul li a:hover {
+    background-color: #575757;
+}
+
+.contenedor-imagen {
+    width: 300px;
+    height: 300px;
+    position: relative;
+    z-index: 100; /* Asegura que esté por debajo del menú */
+}
+
+.contenedor-imagen img {
+    width: 65%;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Sombra difusa */
+}
+
+.imagen-matricula-container {
+    display: none; /* Inicialmente oculta */
+    text-align: center;
+    margin-top: 30px;
+}
+
+.imagen-matricula-container img {
+    width: 100%;
+    max-width: 850px;
 }
