--- a/estilos/main.css
+++ b/estilos/main.css
@@ -22,16 +22,29 @@ body {
 }
 header {
     display: flex;
-    justify-content: flex-end;
-    padding: 10px;
-    background-color: #333;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: #33333300;
     position: relative;
     z-index: 1000;
 }
 
+.titulo {
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+
+.menu-icon {
+    margin-right: 30px; /* Empuja el ícono hacia la izquierda */
+    padding-right: 20px; /* Ajusta el valor según tus necesidades */
+}
+
 .menu-icon img {
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
     cursor: pointer;
 }
 
@@ -102,24 +115,29 @@ header {
     z-index: 100; /* Asegura que esté por debajo del menú */
 }
 
-.contenedor-imagen img {
-    width: 65%;
+.logo img {
+    width: 250px; /* Ajusta el tamaño del logo según tus necesidades */
     height: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    cursor: pointer;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Sombra difusa */
 }
 
 .imagen-matricula-container {
     display: none; /* Inicialmente oculta */
     text-align: center;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .imagen-matricula-container img {
-    width: 100%;
-    max-width: 850px;
+    width: 80%;
+    max-width: 600px;
+}
+
+.imagen-acercade-container {
+    display: none; /* Inicialmente oculta */
+    text-align: center;
+    margin-top: 20px;
+}
+
+.imagen-acercade-container img {
+    width: 80%;
+    max-width: 600px;
 }
