--- a/estilos/main.css
+++ b/estilos/main.css
@@ -1,25 +1,26 @@
+
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
-    
+    font-family: 'Blackletter', serif;
 }
 
 .contenedor-video {
-    position: fixed; /* Cambia a posición fija */
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100vw; /* Ancho del 100% del viewport */
-    height: 56.25vw; /* Mantén la relación de aspecto 16:9 */
-    max-width: 100%; /* Ancho máximo */
-    max-height: 100vh; /* Altura máxima */
-    z-index: -1; /* Coloca el video detrás de otros elementos */
+    width: 100vw;
+    height: 56.25vw;
+    max-width: 100%;
+    max-height: 100vh;
+    z-index: -1;
 }
 
 .contenedor-video video {
-    width: 100%; /* Asegura que el video ocupe todo el ancho del contenedor */
-    height: 100%; /* Asegura que el video ocupe todo el alto del contenedor */
-    object-fit: cover; /* Ajusta el video para cubrir el contenedor */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
+
 header {
     display: flex;
     justify-content: space-between;
@@ -31,15 +32,14 @@ header {
 }
 
 .titulo {
-    color: white;
-    font-size: 30px;
+    color: rgb(133, 133, 133);
+    font-size: 35px;
     font-weight: bold;
 }
 
-
 .menu-icon {
-    margin-right: 30px; /* Empuja el ícono hacia la izquierda */
-    padding-right: 20px; /* Ajusta el valor según tus necesidades */
+    margin-right: 30px;
+    padding-right: 20px;
 }
 
 .menu-icon img {
@@ -51,16 +51,17 @@ header {
 .menu-desplegable {
     position: fixed;
     top: 0;
-    left: -250px; /* Inicialmente fuera de la vista a la izquierda */
+    left: -250px;
     width: 250px;
     height: 100%;
+    font-size: 20px;
     background-image: url('../imagenes/h1.jpg');
     background-color: #333;
     color: white;
     padding-top: 60px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
-    transition: left 0.3s ease; /* Animación suave */
-    z-index: 2000; /* Asegura que esté por encima de otros elementos */
+    transition: left 0.3s ease;
+    z-index: 2000;
 }
 
 .menu-header {
@@ -74,8 +75,9 @@ header {
 }
 
 .menu-title {
-    flex-grow: 1; /* Hace que el contenedor de texto use todo el espacio disponible */
-    text-align: center; /* Centra el texto */
+    flex-grow: 1;
+    text-align: center;
+    font-size: 20px;
 }
 
 .menu-header img {
@@ -101,61 +103,56 @@ header {
     display: block;
     padding: 15px;
     text-align: center;
-    font-weight: bold; /* Engrosa la letra */
+    font-weight: bold;
 }
 
 .menu-desplegable ul li a:hover {
     background-color: #575757;
 }
 
-.contenedor-imagen {
-    width: 300px;
-    height: 300px;
-    position: relative;
-    z-index: 100; /* Asegura que esté por debajo del menú */
+.accordion {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%); /* Centra el acordeón horizontalmente */
+    width: 80%; /* Ajusta el ancho del acordeón */
+    background-color: #33333393; /* Fondo del acordeón */
+    color: rgb(255, 255, 255);
+    z-index: 2000; /* Asegura que esté por encima de otros elementos */
+    border-radius: 8px; /* Opcional: Bordes redondeados */
+    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.5); /* Opcional: Sombra para efecto de elevación */
+}
+
+.accordion-header {
+    padding: 10px;
+    cursor: pointer;
+    font-size: 20px;
+    background-color: #33333393;;
+    font-weight: bold;
+    text-align: center; /* Centra el texto en el encabezado del acordeón */
+}
+
+.accordion-content {
+    display: none; /* Ocultar contenido por defecto */
+    padding: 10px;
+    font-size: 15px;
+    background-color: #33333393;
+    text-align: center; /* Centra el contenido del acordeón */
+}
+
+.accordion-content img {
+    width: 90%;
+    max-width: 600px;
+}
+
+.titulo-acercade h2, .titulo-requisito-matricula h3 {
+    margin-bottom: 10px;
+    text-align: center;
+    color: aliceblue;
 }
 
 .logo img {
-    width: 250px; /* Ajusta el tamaño del logo según tus necesidades */
+    width: 250px; /* Ajusta el tamaño del logo a su tamaño original */
     height: auto;
 }
 
-.imagen-matricula-container {
-    display: none; /* Inicialmente oculta */
-    text-align: center;
-    margin-top: 20px;
-}
-
-.imagen-matricula-container img {
-    width: 80%;
-    max-width: 600px;
-    margin-top: auto;
-    margin-bottom: 100px;
-}
-
-.imagen-acercade-container {
-    display: none; /* Inicialmente oculta */
-    text-align: center;
-    margin-top: 20px;
-}
-
-.imagen-acercade-container img {
-    width: 80%;
-    max-width: 600px;
-}
-
-.titulo-acercade h2 {
-
-    margin-bottom: 10px; /* Margen inferior */
-    text-align: center;
-    color: aliceblue;
-
-}
-
-.titulo-requisito-matricula h3 {
-
-    margin-bottom: 30px; /* Margen inferior */
-    text-align: center;
-    color: aliceblue;
-
-}
